# pygdbmi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pygdbmi_mcp/: server.py
tests/: conftest.py  test_binary.c  test_e2e.py
